--- a/coverPage.html
+++ b/coverPage.html
@@ -44,7 +44,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <link href="coverPage.css" rel="stylesheet">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
 
