--- a/login.html
+++ b/login.html
@@ -1,1 +1,24 @@
-LOGIN PAGE
+<html>
+  <head>
+  </head>
+  <title>login</title>
+  <link rel="stylesheet" type="text/css" href="login.css">
+  <body>
+    <div class="loginbox">
+      <img src="./images/avatar.png" class="avatar">
+      <h1>FDM Login</h1>
+      <form>
+        <p>Username</p>
+        <input type="text" name="" placeholder="Username">
+        <p>Password</p>
+        <input type="password" name="" placeholder="Password">
+        <input type="submit" name="" value="Login">
+        <br>
+        <br>
+        <a href="#">Forgot Password</a>
+      </form>
+    </div>
+
+  </body>
+
+</html>
