--- a/login.html
+++ b/login.html
@@ -1,3 +1,9 @@
+<?php
+
+
+?>
+
+<!DOCTYPE html>
 <html>
   <head>
   </head>
@@ -7,15 +13,19 @@
     <div class="loginbox">
       <img src="./images/avatar.png" class="avatar">
       <h1>FDM Login</h1>
-      <form>
-        <p>Username</p>
-        <input type="text" name="" placeholder="Username">
-        <p>Password</p>
-        <input type="password" name="" placeholder="Password">
-        <input type="submit" name="" value="Login">
-        <br>
-        <br>
-        <a href="#">Forgot Password</a>
+      <form method="POST" action="#">
+          <p>Username</p>
+          <input type="text" name="username" placeholder="Username">
+
+          <p>Password</p>
+          <input type="password" name="password" placeholder="Password">
+
+          <input type="submit" name="" value="Login">
+
+          <br>
+          <br>
+
+          <a href="#">Forgot Password</a>
       </form>
     </div>
 
