--- a/dashboard.html
+++ b/dashboard.html
@@ -1,1 +1,61 @@
 DASHBOARD
+<html>
+    <head>
+        <title>DASHBOARD</title>
+        <link rel="stylesheet" type="text/css" href="dashboard.css" >
+    </head>
+    <body>
+<!--        <nav>-->
+<!--            -->
+<!--        </nav>-->
+        <div class="info">
+            <h3>Information</h3>
+            <ul>
+                <li>
+                    Username:
+                </li>
+                <li>
+                    Email:
+                </li>
+            </ul>
+        </div>
+        <div class="feed">
+            <h3>Feed</h3>
+            <p>lorem ipsum</p>
+        </div>
+        <div class="tasks">
+            <h3>Tasks</h3>
+            <ul>
+                <li>
+                    hkasklsa
+                </li>
+                <li>
+                    nas;jvs;a
+                </li>
+                <li>
+                    ck as;vsa
+                </li>
+                <li>
+                    lkjsv ;as
+                </li>
+            </ul>
+        </div>
+        <div class="deptInfo">
+            <h3>Department Information</h3>
+            <ul class="dptLst">
+                <li>
+                    Department Information:
+                </li>
+                <li>
+                    Department Name:
+                </li>
+                <li>
+                    Department ID:
+                </li>
+                <li>
+                    Department Manager:
+                </li>
+            </ul>
+        </div>
+    </body>
+</html>
