--- a/dashboard.html
+++ b/dashboard.html
@@ -1,53 +1,58 @@
-DASHBOARD
+
 <html>
-    <head>
-        <title>DASHBOARD</title>
-        <link rel="stylesheet" type="text/css" href="dashboard.css" >
-<!--        Bootstrap-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Employee Portal</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <!-- ADD PHP TO MAKE IT VISIBLE ONLY WHEN USER IS LOGGED IN-->
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Your Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">View Schedule</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Search Employee</a>
-                        </li>
-                        <!-- <li class="nav-item">
-                          <a class="nav-link" href="#">About Us</a>
-                        </li> -->
-                        <!-- <li class="nav-item">
-                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li> -->
-                    </ul>
-                    <form class="d-flex">
-                        <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
-                        <button class="btn btn-outline-success" type="submit" style="margin-right: 7%;">LogIn</button>
-                        <!-- we can do a signIn forum fro admin's eyes only !!! ADD PHP SCRIPT HERE FOR SIGNIN BUTTON!!!-->
-                        <button class="btn btn-outline-success" type="submit">SignIn</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-        <div class = "row row1">
-            <div class="col-sm-6 info">
-                <h3>Information</h3>
+<head>
+  <title>DASHBOARD</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="dashboard.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="#">Employee Portal</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="linksnav" class="collapse navbar-collapse" id="navbarCollapse">
+              <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <!-- ADD PHP TO MAKE IT VISIBLE ONLY WHEN USER IS LOGGED IN-->
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Your Profile</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">View Schedule</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Search Employee</a>
+                  </li>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="#">About Us</a>
+                  </li> -->
+                  <!-- <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li> -->
+              </ul>
+              <form class="d-flex">
+                  <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"> -->
+                  <button class="btn btn-outline-success" type="submit" style="margin-right: 10%;">LogIn</button>
+                  <!-- we can do a signIn forum fro admin's eyes only !!! ADD PHP SCRIPT HERE FOR SIGNIN BUTTON!!!-->
+                  <button class="btn btn-outline-success" type="submit">SignIn</button>
+              </form>
+          </div>
+      </div>
+  </nav>
+
+
+
+
+  <div class = "row row1">
+            <div class="col-sm-6 info dashboardbox">
+                <h3>Profile</h3>
+                <div id="profilelayout">
+                <img src="./images/avatar2.jpg" height="90px" width="85px"/>
                 <ul>
                     <li>
                         Username:
@@ -56,8 +61,9 @@ DASHBOARD
                         Email:
                     </li>
                 </ul>
+                </div>
             </div>
-            <div class="col-sm-4 tasks">
+            <div class="col-sm-4 tasks dashboardbox">
                 <h3>Tasks</h3>
                 <ul>
                     <li>
@@ -75,12 +81,12 @@ DASHBOARD
                 </ul>
             </div>
         </div>
-        <div class = "row 2">
-            <div class="col-sm-6 feed">
+        <div class = "row row2">
+            <div class="col-sm-6 feed dashboardbox">
                 <h3>Feed</h3>
                 <p>lorem ipsum</p>
             </div>
-            <div class="col-sm-4 deptInfo">
+            <div class="col-sm-4 deptInfo dashboardbox">
                 <h3>Department Information</h3>
                 <ul class="dptLst">
                     <li>
@@ -98,5 +104,6 @@ DASHBOARD
                 </ul>
             </div>
         </div>
-    </body>
+</body>
+
 </html>
