--- a/viewEmployee.html
+++ b/viewEmployee.html
@@ -11,7 +11,7 @@ require("view.php");
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="assets/dist/js/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!------ Include the above in your HEAD tag ---------->
+    <!---- Include the above in your HEAD tag ---------->
     <link href="viewEmployee.css" rel="stylesheet">
   </head>
   <body>
